# code-master

./: .NET_10_UPGRADE_SUMMARY.md  .gitignore  AGENTS.md  API_UPDATE_SUMMARY.md  BOM_ENCODING_FIX.md  BOM_FIX_COMPLETE_GUIDE.md  CACHE_IMPLEMENTATION.md  CLAUDE.md  CODEGEN_ARCHITECTURE.md  CODE_GENERATION_TEST.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CheckDatabase.csproj  CheckMenuData.csx  CodeMaster.sln  DEVELOPMENT_PLAN.md  FABRICQMS_INTEGRATION_HANDOFF.md  GETTING_STARTED.md  MIGRATION_FIX_SUMMARY.md  NOTICE  PROGRESS.md  PROJECT_CHECKLIST.md  PROJECT_INIT_FIX_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.en.md  README.md  README_DATABASE.md  REFACTOR_SUMMARY.md  SECURITY.md  SUMMARY.md  TASK_ASSIGNMENT.md  add-component-names.sh  add_column.csx  add_dict_translations.sql  check_db.sql  check_menu.py  check_menu_data.csx  check_openapi.csx  check_tables.csx  (+15 more)
.github/: pull_request_template.md
CheckMenuData/: CheckMenuData.csproj  Program.cs
CodeMaster.Agent/: CodeMaster.Agent.csproj
CodeMaster.Agent.Tests/: CodeMaster.Agent.Tests.csproj
CodeMaster.Application/: CodeMaster.Application.csproj
CodeMaster.Client/: App.xaml  App.xaml.cs  CodeMaster.Client.csproj  IMPLEMENTATION_SUMMARY.md  MainWindow.xaml  MainWindow.xaml.cs  QUICK_START.md  README.md  test-client.ps1
CodeMaster.CodeGenerator.Tests/: CodeMaster.CodeGenerator.Tests.csproj
CodeMaster.Vue/src-tauri/: Cargo.toml  tauri.conf.json
CodeMaster.Vue/src-tauri/capabilities/: default.json
CodeMaster.Vue/src-tauri/icons/: icon.icns
CodeMaster.Vue/src-tauri/src/: main.rs
DbCheck/: Program.cs  (+1 more)
(+915 files in other folders)
