[package]
name = "codemaster-client"
version = "1.0.2"
description = "CodeMaster desktop client"
authors = ["CodeMaster"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
